[gd_scene load_steps=8 format=3 uid="uid://pormmvihj0w0"]

[ext_resource type="Texture2D" uid="uid://dy3t35jvpornp" path="res://sprites/Sprite-0005.png" id="1_hkp8d"]
[ext_resource type="Script" path="res://scripts/troll_spike.gd" id="1_y71do"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_54hsy"]
size = Vector2(24, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_25kiv"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_cgx0l"]
resource_name = "attack_anim"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 8), Vector2(0, -8)]
}

[sub_resource type="Animation" id="Animation_1c1e3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 8)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_8wd5h"]
_data = {
"RESET": SubResource("Animation_1c1e3"),
"attack_anim": SubResource("Animation_cgx0l")
}

[node name="TrollSpike" type="Area2D"]
z_index = -1
script = ExtResource("1_y71do")

[node name="InteractArea" type="Area2D" parent="."]
position = Vector2(0, -12)

[node name="Collider" type="CollisionShape2D" parent="InteractArea"]
shape = SubResource("RectangleShape2D_54hsy")

[node name="Hitbox" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("RectangleShape2D_25kiv")

[node name="Sprite" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, 8)
texture = ExtResource("1_hkp8d")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_8wd5h")
}

[node name="HideTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_entered" from="InteractArea" to="." method="_on_interact_area_body_entered"]
[connection signal="timeout" from="HideTimer" to="." method="_on_hide_timer_timeout"]
